improvement of g_function, path initializing

--- a/pierwszy_plyk.ipynb
+++ b/pierwszy_plyk.ipynb
@@ -15,6 +15,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "82dc93ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "np.log1p(math.e - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3dda4fab",
    "metadata": {},
    "outputs": [],
@@ -218,47 +229,96 @@
    "source": [
     "import random\n",
     "\n",
-    "def proponuj_g(struktura, G):\n",
+    "def proponuj_g(structure, G):\n",
     "    \"\"\"\n",
-    "    struktura = [(x0,y0,z0), ...]\n",
-    "    struktura = [id0, id1, ...]\n",
+    "    structure = [(x0,y0,z0), ...]\n",
+    "    structure = [id0, id1, ...]\n",
     "    G - graf csv, (networkx)\n",
     "    \"\"\"\n",
     "    \n",
     "    id0 = None\n",
     "    \n",
-    "    if struktura == None or struktura == []:\n",
-    "        struktura = []\n",
+    "    # empty structure\n",
+    "    if structure == None or structure == []:\n",
+    "        structure = []\n",
     "        # choosing start point index (randomly?)\n",
-    "        id1 = random.randint(0, len(G.nodes) - 1)\n",
-    "        \n",
-    "    else:\n",
-    "        # getting an index of the ends of the structure\n",
-    "        i = random.choice([0, len(struktura) - 1])\n",
-    "        id0 = struktura[i]\n",
+    "        id0 = random.randint(0, len(G.nodes) - 1)\n",
+    "        structure.append(id0)\n",
+    "        return structure\n",
+    "    \n",
+    "    # usuwanie dublujących się krawedzi i testy (może wystarczy)\n",
+    "    # dodatkowo rozbudowywanie struktury (ścieżki) w środku, po wspólnych sąsiadach\n",
+    "    ## PREZENTACJA\n",
+    "    \n",
+    "    def add_to_end():\n",
+    "        # getting an index of one end of the structure\n",
+    "        i = random.choice([0, len(structure) - 1])\n",
+    "        end = True\n",
+    "        if i == 0:\n",
+    "            end = False\n",
+    "        id0 = structure[i]\n",
     "        # get indexes of connected vertices\n",
     "        neighbours = list(G[id0].keys())\n",
     "        # finding new edges\n",
-    "        neighbours = list(set(neighbours).difference(set(struktura)))\n",
-    "        # if there are no other choices, the structure will not changed\n",
+    "        neighbours = list(set(neighbours).difference(set(structure)))\n",
     "        if (neighbours == []):\n",
     "            # we allow to rollback, when we are stuck\n",
-    "            neighbours = list(G[id0].keys())\n",
-    "            print(\"No new node has been added.\")\n",
-    "            #return struktura\n",
+    "            # neighbours = list(G[id0].keys())\n",
+    "            # print(\"No new node has been added.\")\n",
+    "            # or we remove stop point\n",
+    "            #structure.remove(id0)\n",
+    "            structure.pop(i)\n",
+    "            # and try somewhere else\n",
+    "            return add_in_the_middle()\n",
     "        # taking weights of edges\n",
     "        weights = []\n",
     "        for n in neighbours:\n",
     "            weights.append(G[id0][n]['weight'])\n",
+    "            # it may be flattened\n",
+    "            # weights.append(np.log1p(G[id0][n]['weight']))\n",
     "        # choosing the next node index\n",
     "        id1 = int(random.choices(neighbours, weights=weights, k=1)[0])\n",
-    "        # usuwanie dublujących się krawedzi i testy (może wystarczy)\n",
-    "        # dodatkowo rozbudowywanie struktury (ścieżki) w środku, po wspólnych sąsiadach\n",
-    "        ## PREZENTACJA\n",
+    "        if end:\n",
+    "            structure.append(id1)\n",
+    "        else:\n",
+    "            structure.insert(0, id1)\n",
     "        \n",
-    "    struktura.append(id1)\n",
+    "    def add_in_the_middle():\n",
+    "        # finding randomly 2 vertices and inserting additional vertice between them\n",
+    "        i = random.randint(0, len(structure) - 2)\n",
+    "        id0 = structure[i]\n",
+    "        id1 = structure[i+1]\n",
+    "        # looking for common neighbours\n",
+    "        neighbours0 = list(G[id0].keys())\n",
+    "        neighbours1 = list(G[id1].keys())\n",
+    "        neighbours0 = set(neighbours0).difference(set(structure))\n",
+    "        neighbours1 = set(neighbours1).difference(set(structure))\n",
+    "        neighbours = list(neighbours0.intersection(neighbours1))\n",
+    "        if (neighbours == []):\n",
+    "            # we do not add anything\n",
+    "            #print(\"No node has been added.\")\n",
+    "            return\n",
+    "        # taking weights of edges\n",
+    "        weights = []\n",
+    "        for n in neighbours:\n",
+    "            weights.append(G[id0][n]['weight'] * G[id1][n]['weight'])\n",
+    "            # it may be flattened\n",
+    "            # weights.append(np.log1p(G[id0][n]['weight']) * np.log1p(G[id1][n]['weight']))\n",
+    "        # choosing the next node index\n",
+    "        id12 = int(random.choices(neighbours, weights=weights, k=1)[0])\n",
+    "        structure.insert(i, id12)\n",
+    "        \n",
+    "    MIN_MIDDLE_ADD = 10\n",
+    "    if len(structure)  < MIN_MIDDLE_ADD:\n",
+    "        add_to_end()\n",
+    "        return structure\n",
     "    \n",
-    "    return struktura\n",
+    "    if random.randint(0, 1) == 0:\n",
+    "        add_to_end()\n",
+    "    else:\n",
+    "        add_in_the_middle()\n",
+    "    \n",
+    "    return structure\n",
     "   \n",
     "\n",
     "def podobienstwo_f(struktura, mapa_hic):\n",
@@ -284,7 +344,40 @@
     "        \n",
     "    return coordinates\n",
     "\n",
-    "    "
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "034457d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_structure(iterations):\n",
+    "    structure = []\n",
+    "    for i in range(iterations):\n",
+    "        structure = proponuj_g(structure, G)\n",
+    "    #print(\"Structure contains \" + str(len(structure)) + \" vertices.\" )\n",
+    "    return structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed12fbfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#initializing structure\n",
+    "s = create_structure(50000)\n",
+    "v_n = []\n",
+    "for i in range(1000):\n",
+    "    s = create_structure(1000)\n",
+    "    v_n.append(len(s))\n",
+    "print(np.mean(v_n)) # 420\n",
+    "print(np.max(v_n)) # 700\n",
+    "print(np.min(v_n)) # 70"
    ]
   },
   {
@@ -298,11 +391,36 @@
    "source": [
     "# tworzenie struktury\n",
     "struktura = []\n",
-    "for i in range(100):\n",
+    "for i in range(1000):\n",
     "    struktura = proponuj_g(struktura, G)\n",
-    "print(struktura)\n",
+    "#print(struktura)\n",
     "print(len(struktura))\n",
-    "print(get_structure_coordinates(struktura, G))"
+    "print(len(np.unique(struktura)))\n",
+    "print(len(np.unique(struktura)) / len(struktura))\n",
+    "#print(get_structure_coordinates(struktura, G))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0acfb615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struktura = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73419755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "struktura = proponuj_g(struktura, G)\n",
+    "print((struktura))\n",
+    "if (len(np.unique(struktura)) != len(struktura)):\n",
+    "    print(\"ERROR\")"
    ]
   },
   {
