--- a/pierwszy_plyk.ipynb
+++ b/pierwszy_plyk.ipynb
@@ -641,6 +641,8 @@
     "    adds points to the structure so it hase same dimension as dim (hic matrix)\n",
     "    '''\n",
     "    n = len(structure)\n",
+    "    if n == 1:\n",
+    "        raise Exception(\"cannot add points to 1-point structure\")\n",
     "    nr_points = dim - n\n",
     "    if nr_points == 0:\n",
     "        return structure\n",
